// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Combobox should render with options 1`] = `
<div
  className="combobox "
  onBlur={[Function]}
  tabIndex={0}
>
  <div
    className="combobox-option"
    onClick={[Function]}
  >
    <div
      className="combobox-option-icon"
    />
    <p
      className="combobox-option-text"
    >
      Hello
    </p>
  </div>
</div>
`;

exports[`Combobox should render without options 1`] = `
<div
  className="combobox "
  onBlur={[Function]}
  tabIndex={0}
/>
`;
